--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 plugins {
     id 'com.android.library' version '8.8.0' apply false
 }
-task clean(type: Delete) {
+
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
