--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.8.0'
+        classpath libs.gradle
     }
 }
 
 
 plugins {
-    id 'com.android.library' version '8.8.0' apply false
+    alias(libs.plugins.android.library) apply false
 }
 
 tasks.register('clean', Delete) {
